[v1.4] - multiple mana users for multiclass - new exception - rewrite maps to simple way - new storing system